bootstrap/keycloak/keycloak/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.1
          imagePullPolicy: IfNotPresent
          args:
            - start
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 9000
              name: management
          startupProbe:
            httpGet:
              path: /health/started
              port: 9000
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: "250m"
              memory: "768Mi"
            limits:
              cpu: "1000m"
              memory: "1536Mi"
